// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа CounterButton 1`] = `
<div>
  <h3>
    Кнопка-счётчик нажатий
  </h3>
  <input
    onClick={[Function]}
    type="button"
    value="нажатий: 0, степень двойки: 1"
  />
</div>
`;

exports[`работа CounterButton 2`] = `
<div>
  <h3>
    Кнопка-счётчик нажатий
  </h3>
  <input
    onClick={[Function]}
    type="button"
    value="нажатий: 1, степень двойки: 2"
  />
</div>
`;

exports[`работа CounterButton 3`] = `
<div>
  <h3>
    Кнопка-счётчик нажатий
  </h3>
  <input
    onClick={[Function]}
    type="button"
    value="нажатий: 2, степень двойки: 4"
  />
</div>
`;
